src/assets/css/app.css
#app-container {
  font-family: Boomer-Light;
}
h1 {
  font-family:'Publico-Black';
  font-size:42px;
}
h3, h4 {
  font-family: Boomer;
  line-height: 1.3em;
  margin-bottom: 0;
  margin-top: 15px;
}
h4 {
  font-size: 18px;
}
p {
  font-family: Boomer-Light;
  font-size: 16px;
  line-height: 1.6;
}
p strong, li strong {
  font-family: Boomer;
  font-weight: bold;
}
/*nav*/
.name {
  padding-top: 5px;
  margin: 3px;
  width: 175px;
}
.top-bar {
  background-color: #0e3968;
  border-bottom: 4px solid #fff;
  height: 50px;
}
.top-bar-section ul li, .top-bar.expanded .title-area, .top-bar.expanded {
  background-color: #0e3968;
}
.top-bar-section li:not(.has-form) a.header-link {
  background-color: #0e3968;
}
.top-bar-section li.active:not(.has-form) a:not(.button) {
  background: #008cba none repeat scroll 0 0
}
.top-bar-section ul li > a, .top-bar-section li:not(.has-form) a:not(.button) {
  text-transform: uppercase;
}
section {/*override fonts.css*/
  border-bottom: none;
  padding: 0
}
option {
  font-family: Boomer;
}
/*homepage*/
#row-bg {
  background-color: rgba(0, 0, 0, 0.7);
  padding-bottom: 40px;
  padding-top: 70px;
  color: #fff;
}
#row-bg h1 {
  color: #fff;
  font-size: 52px;
}
#bg-img {
  position: fixed;
  top: -7%;
  left: -50px;
  z-index: -10;
}
#bg-img img {
  width: 115%;
  height: auto;
}
#homepage-content {
  position: relative;
/*  height: 100%;*/
}
#homepage-content p {
  font-size: 20px;
}
.background {
  border-top: 4px solid #fff;
  background-color:#0E3968;
}
#home-icon-row {
  padding: 40px 0;
  background-color: #0E3968;
  text-align: center;
}
#home-icon-row img {
  width: 70px;
}
#home-icon-row h3 {
  margin-top: 10px;
  font-family: Boomer-Book;
  text-transform: uppercase;
  font-size: 22px;
}
#home-icon-row h3 a {

  color: white;
}
/*Charts.BarBase*/
.axis text, .chart-label {
  font-family: Boomer-Book;
  font-size: 10px;
}
.base {
  fill: #EEE;
}
.axis path, .axis line {
  fill: none;
  stroke: lightgrey;
  stroke-width: 2px;
  shape-rendering: crispEdgeds;
}
.y.axis text, .bar, .stat-circle {
  cursor: pointer;
}
.y.axis text.active {
  font-family: Boomer;
  font-weight: bold;
}
/*charts extended*/
rect.normal, #legend-region li.normal, #mobile-list .mobile-rating.normal {
  fill: #49709F;
  background-color: #49709F;
}
rect.range.bad, #legend-region li.bad, #mobile-list .mobile-rating.bad {
  fill: #BF653C;
  background-color: #BF653C;
}
rect.range.good, #legend-region li.good, #mobile-list .mobile-rating.good {
  fill: #489162;
  background-color: #489162;
}
#contextLines line {
  stroke-width: 3;
}
line#averageLine {
  stroke: darkgray;
}
line#benchmarkLine {
  stroke: white;
}
div.ttip {
  font-family: Boomer-Book;
  font-size: 12px;
  position: absolute;
  width: 270px;
  padding: 5px;
  margin: 0px;
  background-color: white;
  box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
  pointer-events: none;
  z-index: 101;
}
div.ttip strong {
  font-family: BoomerCond;
}
#main-chart-region {
  padding-bottom: 15px;
}
#legend-region li {
  display: inline;
  padding: 6px;
}
#legend-region li:last-child {
  padding-left: 0;
}
#legend-region ul {
  margin-bottom: 10px;
  margin-left: 0;
}
select#js-filter-criterion {
  margin-bottom: 0;
}
/*hospital view*/
.hospital-info h3 {
  font-family: BoomerCondBlack;;
  margin-top: 0;
}
.hospital-info p {
  margin-bottom: 5px;
  line-height: 1em;
}
.address {
  font-family: BoomerSlab-Light;
  font-size: .9em;
}
.hospital-list h4 {
  font-family: BoomerCond;
}
.hospital-list p {
  font-size: .9em;
  line-height: 1.3em;
  margin-bottom: 0;
}
.hospital-list .hospital-list-item hr {
  margin-top: 5px;
}
.hospital-list-item:not(:first-child) {
  margin-top: 35px;
}
.hospital-list-item.not-available {
  color: darkgray;
}
.hospital-list-item:not(.not-available) p {
  margin-top: 10px;
}
.hospital-list-item p strong {
  font-family: BoomerCond;
  font-weight: normal;
}
#hospital-region-1 #detail-legend {
  margin-bottom: 20px;
}
/*hospital charts*/
.predicted {
  stroke: darkgray;
  stroke-width: 3;
}
.observed {
  stroke: black;
  stroke-width: 3;
}
.chart-label.txt { /*labels for the observed and predicted lines*/
  font-size: 12px;
  stroke-width: 1;
}
.legend-svg {
  vertical-align: middle;
  height: 15px;
  width: 5px;
}
.legend-svg line {
  stroke-width: 5px;
}
.legend-margin {
  margin-left: 10px;
}
#detail-legend .chart-label {
  margin-left: -3px;
}
#legend-region .chart-label:not(:last-child){
  font-family: Boomer;
  font-weight: bold;
}

/*mobile*/
@media (max-width: 405px){
  .name {
    padding-bottom: 5px;
  }
  .mobile-rating {
    display: block;
    width: 20px;
    height: 20px;
    margin: 0 auto;
  }
  #hospital-show-region {
    display: none;
  }
}

